@@ -113,3 +113,5 @@ CHANGES SINCE 2.4.1
 
 52. Fix: certain user functions not allowing return values fixed.
 
+53.Fix: contract failures in subprogram parameters no longer hidden or raised later.
+
